--- a/notebook equa diff.ipynb
+++ b/notebook equa diff.ipynb
@@ -889,7 +889,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On constate que la précision de l'aglorithme utilisant le schéma d'euler avec un pas constant est légèrement meilleure en précision et en un temps sensiblement proche."
+    "On constate que la précision de l'aglorithme utilisant le schéma d'euler avec un pas adaptatif est légèrement meilleure en précision et en un temps sensiblement proche."
    ]
   },
   {
