--- a/notebook equa diff.ipynb
+++ b/notebook equa diff.ipynb
@@ -787,7 +787,7 @@
    "metadata": {},
    "source": [
     "La version à pas variable du schéma d'euler permet avec le même nombre de points qu'une méthode d'euler à pas constant d'avoir une meilleur précision.  \n",
-    "En effet la première boucle while permet de calculer les xs successifs au différents temps ts. La deuxième boucle permet que les points sont espacés d'un temps ts environ grâce à la variable ti. Dans la boucle on utilise la méthode d'euler en utilisant le pas permettant de contrôler l'erreur grâce au résultat de la question précédente. "
+    "En effet la première boucle while permet de calculer les xs successifs au différents temps ts. La deuxième boucle permet que les points soient espacés d'un temps dtmax environ grâce à la variable ti. Dans la deuxième boucle on applique la méthode d'euler en utilisant le pas de la question précédente permettant de contrôler l'erreur. On calcule ainsi des points intermédiaires lorsque nécessaire pour gagner en précision. "
    ]
   },
   {
@@ -889,7 +889,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On constate que la précision de l'aglorithme utilisant le schéma d'euler avec un pas adaptatif est légèrement meilleure en précision et en un temps sensiblement proche."
+    "On constate que la précision de l'algorithme utilisant le schéma d'euler avec un pas adaptatif est légèrement meilleure en précision et en un temps sensiblement proche."
    ]
   },
   {
