--- a/notebook equa diff.ipynb
+++ b/notebook equa diff.ipynb
@@ -701,11 +701,11 @@
     "### Question 1\n",
     "\n",
     "Soit j tel que $0 \\leq j \\leq J-1$ et soit $\\tilde{x}$ la solution du problème de Cauchy :\n",
-    "$$\\dot{y}=f(t,y), y(t_{j})=x^{j}$$\n",
+    "$$\\dot{y}=f(t,y) ,  y(t_{j})=x^{j}$$\n",
     "\n",
     "\n",
     "\n",
-    "En appliquant la formule de Taylor à l'ordre 2 en $t_{j}$ à $t_{j+1}$ à $\\tilde{x}$ (on a le droit puisque $f$ est $C^1$ donc $\\tilde{x}$ est deux fois dérivable) on obtient :\n",
+    "En appliquant la formule de Taylor à l'ordre 2 en $t_{j}$ à $t_{j+1}$ à $\\tilde{x}$ (possible car $f$ est $C^1$ donc $\\tilde{x}$ est deux fois dérivable) on obtient :\n",
     "\n",
     "\\begin{align}\n",
     "\\tilde{x}(t_{j+1})&=\\tilde{x}(t_{j})+\\Delta t_{j}  \\tilde{x}'(t_{j}) + \\frac{\\Delta t _{j}^2}{ 2}  \\tilde{x}''(t_{j}) + o(\\Delta t_{j} ^2) \\notag \\\\\n",
@@ -725,14 +725,11 @@
     "&=\\frac{\\Delta t _{j} ^2}{2} (\\partial _{1} f(t_{j},x^{j}) +  f(t_{j},x^j) \\partial _{2} f(t_{j},x^{j})) + o(\\Delta t_{j} ^2)\n",
     "\\end{align}\n",
     "\n",
-    "D'autre part on a en appliquant la formule de Taylor à l'orde 1 à f (puisque $f$ est $C^1$): \n",
+    "D'autre part, on a en appliquant la formule de Taylor à l'ordre 1 à f (puisque $f$ est $C^1$): \n",
     "\\begin{align}\n",
     "f(t_{j+1},x^{j+1})-f(t_{j},x^{j})&=f(t_{j}+\\Delta t _{j},x^{j}+\\Delta t _{j} f(t_{j},x^{j}))-f(t_{j},x^{j})\\notag \\\\\n",
-    "&=\\Delta t_{j} \\partial _{1} f(t_{j},x^{j}) + \\Delta t_{j}f(t_{j},x^{j}) \\partial _{2} f(t_{j},x^{j}) + o(\\Delta t_{j}(x_{j+1}-x_{j}))\n",
+    "&=\\Delta t_{j} \\partial _{1} f(t_{j},x^{j}) + \\Delta t_{j}f(t_{j},x^{j}) \\partial _{2} f(t_{j},x^{j}) + o(\\Delta t_{j})\n",
     "\\end{align}\n",
-    "\n",
-    "Or comme le schéma d'euler est convergent d'ordre 1 on a :\n",
-    "$$x_{j+1}-x_{j}=$$\n",
     "\n",
     "On a enfin : \n",
     "$$e^{j+1}= \\frac{\\Delta t _ {j}}{2} (f(t_{j+1},x^{j+1})-f(t_{j},x^{j})) + o(\\Delta t _{j} ^2)$$\n",
@@ -1072,7 +1069,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
