--- a/notebook equa diff.ipynb
+++ b/notebook equa diff.ipynb
@@ -741,9 +741,9 @@
     "D'où on a bien : \n",
     "$$e^{j+1}=O(\\Delta t _{j} ^2)$$\n",
     "\n",
-    "On prend donc $ \\Delta t_{new} = \\Delta t_j \\sqrt{\\frac{\\texttt{Tol}_{abs}}{|e^{j+1}|}} $ comme nouvelle valeur de $dt$ car lorque cela permet d'adapter le pas de temps en le diminuant lorsque l'erreur n'est pas acceptable, ie lorsque $\\texttt{Tol}_{abs} \\leq |e^{j+1}|$, et de l'augmenter dans le cas contraire. \n",
+    "On prend donc $ \\Delta t_{new} = \\Delta t_j \\sqrt{\\frac{\\texttt{Tol}_{abs}}{|e^{j+1}|}} $ comme nouvelle valeur de $dt$ car cela permet d'adapter le pas de temps en le diminuant lorsque l'erreur n'est pas acceptable, ie lorsque $\\texttt{Tol}_{abs} \\leq |e^{j+1}|$, et de l'augmenter dans le cas contraire. \n",
     "\n",
-    "De plus comme $e^{j+1}=O(\\Delta t _{j} ^2)$, $\\Delta t_{new}$ est donc choisi assez grand pour que l'on ne prenne pas des pas trop petits et donc que l'on ne prenne pas beaucoup de temps inutilement. "
+    "De plus comme $e^{j+1}=O(\\Delta t _{j} ^2)$, $\\Delta t_{new}$ est choisi assez grand. Cela évite d'avoir une augmentation du temps d'exécution."
    ]
   },
   {
@@ -783,8 +783,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La version à pas variable du schéma d'euler permet avec le même nombre de points qu'une méthode d'euler à pas constant d'avoir une meilleur précision.  \n",
-    "En effet la première boucle while permet de calculer les xs successifs au différents temps ts. La deuxième boucle permet que les points soient espacés d'un temps dtmax environ grâce à la variable ti. Dans la deuxième boucle on applique la méthode d'euler en utilisant le pas de la question précédente permettant de contrôler l'erreur. On calcule ainsi des points intermédiaires lorsque nécessaire pour gagner en précision. "
+    "La version à pas variable du schéma d'euler, permet avec le même nombre de points qu'une méthode d'euler à pas constant, d'avoir une meilleur précision.  \n",
+    "En effet la première boucle while permet de calculer les xs successifs au différents temps ts. La deuxième boucle permet que les points soient espacés d'un temps dtmax environ grâce à la variable ti. Dans la deuxième boucle on applique la méthode d'euler en utilisant le pas de la question précédente, qui permet de contrôler l'erreur. On calcule ainsi des points intermédiaires lorsque nécessaire pour gagner en précision. "
    ]
   },
   {
